fixed demo pic on mobile

--- a/app/assets/stylesheets/_landing.css.scss
+++ b/app/assets/stylesheets/_landing.css.scss
@@ -219,6 +219,7 @@ $blue: #0066A3;
 
     @include media($break-xxsmall) {
       height: 30px;
+      padding-bottom: 90px;
     }
   }
 }
